[EPMCDLAB-1184]: fixed clipped notebook name popup for failed notebook

--- a/services/self-service/src/main/resources/webapp/src/app/shared/modal-dialog/modal.component.css
+++ b/services/self-service/src/main/resources/webapp/src/app/shared/modal-dialog/modal.component.css
@@ -455,7 +455,7 @@ limitations under the License.
 }
 
 .detail-info p {
-  font-weight: 600;
+  font-weight: 400;
   margin-bottom: 10px;
 }
 
